--- a/common/app/assets/stylesheets/state/_state.scss
+++ b/common/app/assets/stylesheets/state/_state.scss
@@ -16,7 +16,7 @@
 }
 
 .has-cursor {
-  cursor: pointer;
+    cursor: pointer;
 }
 
 .maxed {
@@ -70,7 +70,7 @@
 }
 
 .update {
-	display:block;
+    display:block;
     background-color: $mushroom;
     margin-bottom: $baseline*4;
     padding: 0 0 0 $baseline*2;
@@ -107,7 +107,7 @@
 
 .update-btn.is-active,
 .update-btn:hover {
-    color: #ffffff;
+    color: #fff;
     background-color: #E47A39;
 }
 
@@ -133,7 +133,7 @@
     margin-right: 5px;
     font-size: 10px;
     font-style: normal;
-    line-height: 1em;
-    color: #ffffff;
+    line-height: 1;
+    color: #fff;
     background-color: #ec1c1c;
 }
