--- a/common/app/assets/stylesheets/theme/_zones.scss
+++ b/common/app/assets/stylesheets/theme/_zones.scss
@@ -30,7 +30,7 @@
 .zone-film .zone-color,
 .zone-books .zone-color,
 .zone-music .zone-color {
-	color: $culturePink;
+    color: $culturePink;
 }
 
 
@@ -47,35 +47,35 @@
 .zone-uk .zone-color,
 .zone-media .zone-color,
 .zone-world .zone-color {
-	color: $newsRed;
+    color: $newsRed;
 }
 
 .zone-fashion .zone-color,
 .zone-lifeandstyle .zone-color {
-	color: $lifeandstyleOrange;
+    color: $lifeandstyleOrange;
 }
 
 .zone-sport .zone-color,
 .zone-football .zone-color {
-	color: $sportBright;
+    color: $sportBright;
 }
 
 .zone-travel .zone-color {
-    color: $travelBlue
+    color: $travelBlue;
 }
 
 .zone-business .zone-color {
-    color: $businessBlue
+    color: $businessBlue;
 }
 
 .zone-commentisfree .zone-color,
 .zone-tone .zone-color,
 .zone-global .zone-color {
-    color: $commentBlue
+    color: $commentBlue;
 }
 
 .zone-money .zone-color {
-    color: $moneyPurple
+    color: $moneyPurple;
 }
 
 .zone-childrens-books-site .zone-background,
@@ -116,19 +116,19 @@
 }
 
 .zone-travel .zone-background {
-    background-color: $travelBlue
+    background-color: $travelBlue;
 }
 
 .zone-business .zone-background {
-    background-color: $businessBlue
+    background-color: $businessBlue;
 }
 
 .zone-commentisfree .zone-background,
 .zone-tone .zone-background,
 .zone-global .zone-background {
-    background-color: $commentBlue
+    background-color: $commentBlue;
 }
 
 .zone-money .zone-background {
-    background-color: $moneyPurple
+    background-color: $moneyPurple;
 }
