--- a/common/app/assets/stylesheets/module/_social.scss
+++ b/common/app/assets/stylesheets/module/_social.scss
@@ -1,7 +1,7 @@
 .social {
    margin: 0;  
    list-style: none;
-   padding: $baseline*3 0 $baseline*4 0;
+   padding: $baseline*3 0 $baseline*4;
    min-height: 40px;
 }
  
@@ -11,28 +11,27 @@ a.social-btn {
     text-align: center;
     display: block;
     padding: 8px 0;
-    color: #ffffff;
-    border-bottom: 8px solid #ffffff;
+    color: #fff;
+    border-bottom: 8px solid #fff;
     position: relative
 }
 
 .social .social-btn span {
-	display: block;
+    display: block;
     position: absolute;
 }
 .social .social-btn .logo-container {
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
 .social .social-btn .logo {
-	left: 5px;
-	bottom: 5px;
+    left: 5px;
+    bottom: 5px;
 }
 
 @media (min-width: 20em) {
-    
     .social .social-network {
         float: left;
         width: 24%;
@@ -48,7 +47,7 @@ a.social-btn {
     a.social-btn {
         border-bottom-width: 0;
     }
-   
+
     .social-network:last-child .social-btn {
         border-right-width: 0;
     }
