--- a/common/app/views/fragments/header.scala.html
+++ b/common/app/views/fragments/header.scala.html
@@ -2,7 +2,7 @@
 @import CommonSwitches.SearchSwitch
 
 <header id="header" class="gs-container cf" role="banner" data-link-name="global navigation: header">
-    <a href="/" id="logo" class="i i-guardian-logo" data-link-name="site logo">The Guardian</a>
+    <a href="/@Editionalise("", request)" id="logo" class="i i-guardian-logo" data-link-name="site logo">The Guardian</a>
 
     <div class="nav-container">
         <ul class="nav nav--global" data-link-name="Sections">
