Remove adslot for feature phones and devices with JS disabled

--- a/common/app/assets/stylesheets/module/_adslot.scss
+++ b/common/app/assets/stylesheets/module/_adslot.scss
@@ -1,5 +1,7 @@
 .ad-slot {
-    display: block;
+    display: none;
+    .js-on & { display: block; }
+
     width: 100%;
     padding: 10px 0 0 0;
     text-align: center;
