Speech bubbles keep their appearance when JS is disabled or comment count fails to load in

--- a/common/app/assets/stylesheets/module/_discussion.scss
+++ b/common/app/assets/stylesheets/module/_discussion.scss
@@ -280,10 +280,12 @@ $keylineSize: 1px;
     @include font($sans-serif, normal, 14, 14);
     position: relative;
     display: inline-block;
-    background: #F6644F;
+    min-height: 14px;
+    min-width: 17px;
     padding: .275em .6em .375em;
     border: 0;
     border-radius: 4px;
+    background: #F6644F;
     text-align: center;
     color: white;
     text-decoration: none;
