HTML entities are escaped in discussion's article title

--- a/discussion/app/views/comments.scala.html
+++ b/discussion/app/views/comments.scala.html
@@ -8,7 +8,7 @@
         <div class="article-body">
             <header class="article__head">
                 <h1 class="article-headline">
-                    <a href="@page.contentUrl">@page.title</a>
+                    <a href="@page.contentUrl">@Html(page.title)</a>
                 </h1>
             </header>
         
