Variant 1: Remove spacing from paragraphs, add indents

--- a/common/app/assets/stylesheets/module/external/_from-content-api.scss
+++ b/common/app/assets/stylesheets/module/external/_from-content-api.scss
@@ -34,6 +34,29 @@
         padding: 0;
         color: #333;
     }
+
+    .test--paragraph-indentation & {
+        // Experiment with indents
+        > p {
+            margin-bottom: 0;
+
+            + p {
+                text-indent: 1.5em;
+            }
+            + figure,
+            + video {
+                margin-top: $baseline;
+            }
+        }
+        > p,
+        > figure,
+        > video {
+            + h2,
+            + h3 {
+                margin-top: $baseline*3;
+            }
+        }
+    }
 }
 
 .article blockquote,
