--- a/common/app/assets/stylesheets/module/_adslot.scss
+++ b/common/app/assets/stylesheets/module/_adslot.scss
@@ -10,10 +10,9 @@
     //For expandables
     position: relative;
     z-index: 1000;
-    // We do not get desktop ads yet. Uncomment when needed.
-    // @media (min-width: $desktopAd) {
-    //     min-height: 96px;
-    // }
+    @media (min-width: $desktopAd) {
+        min-height: 96px;
+    }
 
     iframe {
         margin: 0 auto;
